Integrated Firestore to query API
