# backend/referral/models/application.py
@@ -16,25 +16,25 @@ class Application(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, attributes: Dict[str, object]=None, summary: Summary=None):  # noqa: E501
+    def __init__(self, skills: Dict[str, object]=None, summary: Summary=None):  # noqa: E501
         """Application - a model defined in Swagger
 
-        :param attributes: The attributes of this Application.  # noqa: E501
-        :type attributes: Dict[str, object]
+        :param skills: The skills of this Application.  # noqa: E501
+        :type skills: Dict[str, object]
         :param summary: The summary of this Application.  # noqa: E501
         :type summary: Summary
         """
         self.swagger_types = {
-            'attributes': Dict[str, object],
+            'skills': Dict[str, object],
             'summary': Summary
         }
 
         self.attribute_map = {
-            'attributes': 'attributes',
+            'skills': 'skills',
             'summary': 'summary'
         }
 
-        self._attributes = attributes
+        self._skills = skills
         self._summary = summary
 
     @classmethod
@@ -49,27 +49,27 @@ class Application(Model):
         return util.deserialize_model(dikt, cls)
 
     @property
-    def attributes(self) -> Dict[str, object]:
-        """Gets the attributes of this Application.
+    def skills(self) -> Dict[str, object]:
+        """Gets the skills of this Application.
 
-        Attributes are key-value pairs that describe the application content and intent. Certain attributes can be applied to most applications and those are defined here. Such attributes are expected to grow as we gain more understanding of the product, but existing definitions should not change for backward compatibility reasons. Applications are not required to have all the attributes defined either. It is also possible for applications to provide additional keyword “tags” to help improve query relevance.  # noqa: E501
+        Skills are key-value pairs that describe the application content and intent. Certain skills can be applied to most applications and those are defined here. Such skills are expected to grow as we gain more understanding of the product, but existing definitions should not change for backward compatibility reasons. Applications are not required to have all the skills defined either. It is also possible for applications to provide additional keyword “tags” to help improve query relevance.  # noqa: E501
 
-        :return: The attributes of this Application.
+        :return: The skills of this Application.
         :rtype: Dict[str, object]
         """
-        return self._attributes
+        return self._skills
 
-    @attributes.setter
-    def attributes(self, attributes: Dict[str, object]):
-        """Sets the attributes of this Application.
+    @skills.setter
+    def skills(self, skills: Dict[str, object]):
+        """Sets the skills of this Application.
 
-        Attributes are key-value pairs that describe the application content and intent. Certain attributes can be applied to most applications and those are defined here. Such attributes are expected to grow as we gain more understanding of the product, but existing definitions should not change for backward compatibility reasons. Applications are not required to have all the attributes defined either. It is also possible for applications to provide additional keyword “tags” to help improve query relevance.  # noqa: E501
+        skills are key-value pairs that describe the application content and intent. Certain skills can be applied to most applications and those are defined here. Such skills are expected to grow as we gain more understanding of the product, but existing definitions should not change for backward compatibility reasons. Applications are not required to have all the skills defined either. It is also possible for applications to provide additional keyword “tags” to help improve query relevance.  # noqa: E501
 
-        :param attributes: The attributes of this Application.
-        :type attributes: Dict[str, object]
+        :param skills: The skills of this Application.
+        :type skills: Dict[str, object]
         """
 
-        self._attributes = attributes
+        self._skills = skills
 
     @property
     def summary(self) -> Summary:
